codespace/drill-app-go/manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api
  namespace: warehouse-sys
  labels:
    component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: inventory-api
          image: inventory-api:local
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9090
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
