codespace/drill-app-go/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-svc
  namespace: warehouse-sys
spec:
  selector:
    component: api
  ports:
    - port: 80
      targetPort: 9090
