codespace/drill-app-go/manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-db-svc
  namespace: warehouse-sys
spec:
  selector:
    component: database
  ports:
    - port: 5432
      targetPort: 5432
